# minlpc

./: .gitignore  CMakeLists.txt  README.md
include/: big_files.h  medium1_files.h  medium2_files.h  small_files.h
scripts/: convert.sh  headers.sh
src/f2c/src/: changes  xsum0.out
src/solvers/: 00lastchange  CMakeLists.txt  changes
src/solvers/examples/: fmng1.f  mainc.f  maincb.f  mainfc.f  mains.f  mainsb.f  makefile.u  nlcopy.c  tn.f  ve08ad.f  ve08ts.f
src/solvers/examples/cport/: cport.lbc
src/solvers/nlc/: c_op.hd  changes  makefile.u  r_ops1.hd  xsum0.out
tests/: 4stufen.c  abel.c  alan.c  alkyl.c  alkylation.c  arki0001.c  arki0002.c  arki0004.c  arki0008.c  arki0009.c  arki0010.c  arki0015.c  arki0016.c  arki0017.c  arki0019.c  arki0020.c  autocorr_bern20-03.c  autocorr_bern20-05.c  autocorr_bern20-10.c  autocorr_bern20-15.c  autocorr_bern25-03.c  autocorr_bern25-06.c  autocorr_bern25-13.c  autocorr_bern25-19.c  autocorr_bern25-25.c  autocorr_bern30-04.c  autocorr_bern30-08.c  autocorr_bern30-15.c  autocorr_bern30-23.c  autocorr_bern30-30.c  autocorr_bern35-04.c  autocorr_bern35-09.c  autocorr_bern35-18.c  autocorr_bern35-26.c  autocorr_bern35-35.c  autocorr_bern35-35fix.c  autocorr_bern40-05.c  autocorr_bern40-10.c  autocorr_bern40-20.c  autocorr_bern45-05.c  (+1334 more)
