cmake_minimum_required(VERSION 3.0)

project(minlpc C)

option(BUILD_BIG_LIB      "Build the big instances library (files above 10Mo)" OFF)
option(BUILD_MEDIUM_1_LIB "Build the medium 2 instances library (files between 1Mo and 10Mo)" OFF)
option(BUILD_MEDIUM_2_LIB "Build the medium 1 instances library (files between 100ko and 1Mo)" ON)
option(BUILD_SMALL_LIB    "Build the small instances library (files below 100ko)" ON)

include(GNUInstallDirs)

add_subdirectory(src/solvers)

include_directories(${CMAKE_BINARY_DIR}/src/solvers)

set(BIG_FILES tests/telecomsp_nor_sun.c
              tests/hadamard_9.c
	      tests/densitymod.c
	      tests/faclay80.c
	      tests/faclay75.c
	      tests/pb302055.c
	      tests/pb302075.c
	      tests/pb302035.c
	      tests/pb302095.c
	      tests/faclay70.c
	      tests/powerflow2736spr.c
	      tests/pb351575.c
	      tests/pb351595.c
	      tests/pb351535.c
	      tests/pb351555.c
	      tests/transswitch2736spp.c
	      tests/powerflow2736spp.c
	      tests/powerflow2383wpr.c
	      tests/hadamard_8.c
	      tests/milinfract.c
	      tests/faclay60.c
	      tests/transswitch2383wpp.c
	      tests/mbtd.c
	      tests/watercontamination0303.c
	      tests/watercontamination0202.c
	      tests/transswitch2736spr.c
	      tests/telecomsp_metro.c
	      tests/powerflow2383wpp.c
	      tests/telecomsp_njlata.c
	      tests/transswitch2383wpr.c
	      tests/autocorr_bern60-60.c
	      tests/elec200.c
	      tests/saa_2.c
	      tests/autocorr_bern60-45.c
	      tests/telecomsp_pacbell.c
	      tests/arki0023.c
	      tests/autocorr_bern55-55.c
	      tests/autocorr_bern55-41.c
	      tests/autocorr_bern50-50.c)

set(MEDIUM1_FILES tests/arki0006.c
                  tests/eg_disc2_s.c
		  tests/eg_disc_s.c
		  tests/eg_all_s.c
		  tests/eg_int_s.c
		  tests/autocorr_bern50-38.c
		  tests/minsurf100.c
		  tests/autocorr_bern60-30.c
		  tests/nuclear10b.c
		  tests/arki0005.c
		  tests/gams03.c
		  tests/color_lab2_4x0.c
		  tests/supplychainp1_053050.c
		  tests/jbearing100.c
		  tests/nuclear104.c
		  tests/autocorr_bern45-45.c
		  tests/arki0022.c
		  tests/methanol400.c
		  tests/autocorr_bern55-28.c
		  tests/minsurf75.c
		  tests/arki0011.c
		  tests/arki0012.c
		  tests/arki0014.c
		  tests/watercontamination0303r.c
		  tests/arki0024.c
		  tests/arki0013.c
		  tests/autocorr_bern45-34.c
		  tests/flowchan400fix.c
		  tests/jbearing75.c
		  tests/ising2_5-300_5555.c
		  tests/torsion100.c
		  tests/arki0018.c
		  tests/qap.c
		  tests/autocorr_bern40-40.c
		  tests/gasoil400.c
		  tests/autocorr_bern50-25.c
		  tests/faclay35.c
		  tests/color_lab6b_4x20.c
		  tests/qspp_0_12_0_1_10_1.c
		  tests/nuclear10a.c
		  tests/portfol_robust200_03.c
		  tests/portfol_shortfall200_05.c
		  tests/minsurf50.c
		  tests/autocorr_bern40-30.c
		  tests/arki0021.c
		  tests/arki0003.c
		  tests/polygon100.c
		  tests/torsion75.c
		  tests/elec100.c
		  tests/faclay33.c
		  tests/popdynm200.c
		  tests/jbearing50.c
		  tests/powerflow0300r.c
		  tests/pinene200.c
		  tests/autocorr_bern35-35fix.c
		  tests/transswitch0300p.c
		  tests/autocorr_bern45-23.c
		  tests/methanol200.c
		  tests/ex8_2_3b.c
		  tests/autocorr_bern35-35.c
		  tests/qspp_0_11_0_1_10_1.c
		  tests/gams02.c
		  tests/arki0008.c
		  tests/powerflow0300p.c
		  tests/emfl100_5_5.c
		  tests/hadamard_7.c
		  tests/crudeoil_lee4_10.c
		  tests/flowchan200fix.c
		  tests/faclay30h.c
		  tests/squfl030-150persp.c
		  tests/faclay30.c
		  tests/autocorr_bern35-26.c
		  tests/torsion50.c
		  tests/gasprod_sarawak81.c
		  tests/edgecross24-115.c
		  tests/transswitch0300r.c
		  tests/crudeoil_lee4_09.c
		  tests/glider400.c
		  tests/gasoil200.c
		  tests/arki0009.c
		  tests/autocorr_bern40-20.c
		  tests/autocorr_bern60-15.c
		  tests/uselinear.c
		  tests/polygon75.c
		  tests/portfol_classical200_2.c
		  tests/nuclear49b.c
		  tests/crudeoil_lee4_08.c
		  tests/qspp_0_10_0_1_10_1.c
		  tests/johnall.c
		  tests/minsurf25.c
		  tests/arki0016.c
		  tests/autocorr_bern30-30.c
		  tests/crudeoil_lee3_10.c
		  tests/nuclear49.c
		  tests/ex8_2_5b.c
		  tests/squfl040-080persp.c
		  tests/edgecross24-057.c
		  tests/qapw.c
		  tests/space960.c
		  tests/supplychainr1_053050.c
		  tests/edgecross22-096.c
		  tests/popdynm100.c
		  tests/crudeoil_lee2_10.c
		  tests/squfl030-100persp.c
		  tests/robot400.c
		  tests/jbearing25.c
		  tests/squfl030-150.c
		  tests/squfl020-150persp.c
		  tests/autocorr_bern55-14.c
		  tests/emfl050_5_5.c
		  tests/crudeoil_lee4_07.c
		  tests/pinene100.c
		  tests/arki0017.c
		  tests/crudeoil_lee3_09.c
		  tests/autocorr_bern30-23.c
		  tests/methanol100.c
		  tests/powerflow0118r.c
		  tests/gastrans582_freezing30_95.c
		  tests/gastrans582_freezing27_95.c
		  tests/arki0020.c
		  tests/ex8_2_2b.c
		  tests/gastrans582_freezing30.c
		  tests/gastrans582_freezing27.c
		  tests/crudeoil_lee2_09.c
		  tests/gastrans582_cold17_95.c
		  tests/gastrans582_cool14_95.c
		  tests/gastrans582_cool12_95.c
		  tests/gastrans582_mild11_95.c
		  tests/gastrans582_mild10_95.c
		  tests/gastrans582_warm15_95.c
		  tests/gastrans582_cold13_95.c
		  tests/gastrans582_warm31_95.c
		  tests/faclay25.c
		  tests/watercontamination0202r.c
		  tests/transswitch0118p.c
		  tests/autocorr_bern35-18.c
		  tests/gastrans582_cold17.c
		  tests/gastrans582_cool14.c
		  tests/gastrans582_cool12.c
		  tests/gastrans582_mild11.c
		  tests/gastrans582_mild10.c
		  tests/gastrans582_warm15.c
		  tests/gastrans582_cold13.c
		  tests/gastrans582_warm31.c
		  tests/catmix800.c
		  tests/arki0004.c
		  tests/edgecross22-048.c
		  tests/flowchan100fix.c
		  tests/crudeoil_lee3_08.c
		  tests/crudeoil_lee4_06.c
		  tests/ibs2.c
		  tests/routingdelay_proj.c
		  tests/edgecross20-080.c
		  tests/powerflow0118p.c
		  tests/autocorr_bern50-13.c
		  tests/crudeoil_lee2_08.c
		  tests/torsion25.c
		  tests/nuclear49a.c
		  tests/crudeoil_li21.c
		  tests/squfl040-080.c
		  tests/squfl020-150.c
		  tests/squfl030-100.c
		  tests/waterno2_24.c
		  tests/glider200.c
		  tests/supplychainp1_022020.c
		  tests/crudeoil_lee3_07.c
		  tests/gasoil100.c
		  tests/arki0010.c
		  tests/rocket400.c
		  tests/transswitch0118r.c
		  tests/infeas1.c
		  tests/autocorr_bern25-25.c
		  tests/crudeoil_lee4_05.c
		  tests/graphpart_clique-70.c
		  tests/crudeoil_li02.c
		  tests/crudeoil_lee2_07.c
		  tests/portfol_robust100_09.c
		  tests/rsyn0840m04h.c
		  tests/portfol_shortfall100_04.c
		  tests/unitcommit2.c
		  tests/edgecross20-040.c
		  tests/netmod_dol2.c
		  tests/gams01.c
		  tests/unitcommit1.c
		  tests/fdesign50.c
		  tests/lop97ic.c)

set(MEDIUM2_FILES tests/crudeoil_lee3_06.c
                  tests/popdynm50.c
		  tests/polygon50.c
		  tests/lnts400.c
		  tests/autocorr_bern25-19.c
		  tests/elec50.c
		  tests/rsyn0830m04h.c
		  tests/robot200.c
		  tests/emfl100_3_3.c
		  tests/edgecross14-137.c
		  tests/autocorr_bern30-15.c
		  tests/waterno2_18.c
		  tests/crudeoil_lee2_06.c
		  tests/smallinvSNPr4b100-110.c
		  tests/smallinvSNPr4b150-165.c
		  tests/smallinvSNPr4b200-220.c
		  tests/smallinvSNPr4b010-011.c
		  tests/smallinvSNPr4b020-022.c
		  tests/smallinvSNPr4b050-055.c
		  tests/smallinvSNPr3b100-110.c
		  tests/smallinvSNPr3b150-165.c
		  tests/smallinvSNPr3b200-220.c
		  tests/smallinvSNPr3b010-011.c
		  tests/smallinvSNPr3b020-022.c
		  tests/smallinvSNPr3b050-055.c
		  tests/smallinvSNPr5b100-110.c
		  tests/smallinvSNPr5b150-165.c
		  tests/smallinvSNPr5b200-220.c
		  tests/smallinvSNPr5b010-011.c
		  tests/smallinvSNPr5b020-022.c
		  tests/smallinvSNPr5b050-055.c
		  tests/smallinvSNPr2b100-110.c
		  tests/smallinvSNPr2b150-165.c
		  tests/smallinvSNPr2b200-220.c
		  tests/smallinvSNPr1b100-110.c
		  tests/smallinvSNPr1b150-165.c
		  tests/smallinvSNPr1b200-220.c
		  tests/smallinvSNPr2b010-011.c
		  tests/smallinvSNPr2b020-022.c
		  tests/smallinvSNPr2b050-055.c
		  tests/smallinvSNPr1b010-011.c
		  tests/smallinvSNPr1b020-022.c
		  tests/smallinvSNPr1b050-055.c
		  tests/edgecross14-156.c
		  tests/knp5-44.c
		  tests/pinene50.c
		  tests/edgecross14-117.c
		  tests/chp_partload.c
		  tests/deb9.c
		  tests/deb8.c
		  tests/deb7.c
		  tests/routingdelay_bigm.c
		  tests/product2.c
		  tests/crudeoil_lee1_10.c
		  tests/autocorr_bern45-11.c
		  tests/knp5-43.c
		  tests/gastrans135.c
		  tests/crudeoil_li11.c
		  tests/graphpart_clique-60.c
		  tests/methanol50.c
		  tests/arki0015.c
		  tests/faclay20h.c
		  tests/chain400.c
		  tests/knp5-42.c
		  tests/rsyn0840m04m.c
		  tests/rsyn0840m03h.c
		  tests/rsyn0820m04h.c
		  tests/crudeoil_lee3_05.c
		  tests/knp5-41.c
		  tests/case_1scv2.c
		  tests/edgecross14-098.c
		  tests/squfl015-080persp.c
		  tests/catmix400.c
		  tests/knp5-40.c
		  tests/flowchan50fix.c
		  tests/crudeoil_lee1_09.c
		  tests/crudeoil_lee2_05.c
		  tests/arki0002.c
		  tests/rsyn0815m04h.c
		  tests/edgecross14-176.c
		  tests/pooling_epa3.c
		  tests/netmod_dol1.c
		  tests/nuclear25b.c
		  tests/powerflow0057r.c
		  tests/syn40m04h.c
		  tests/sonet24v5.c
		  tests/rsyn0830m04m.c
		  tests/rsyn0830m03h.c
		  tests/nuclear14b.c
		  tests/arki0019.c
		  tests/waste.c
		  tests/edgecross14-078.c
		  tests/transswitch0057p.c
		  tests/var_con10.c
		  tests/nuclear25.c
		  tests/camshape800.c
		  tests/var_con5.c
		  tests/oil.c
		  tests/autocorr_bern40-10.c
		  tests/waterno2_12.c
		  tests/glider100.c
		  tests/squfl020-050persp.c
		  tests/squfl025-040persp.c
		  tests/crudeoil_lee1_08.c
		  tests/nuclear14.c
		  tests/rsyn0810m04h.c
		  tests/gasoil50.c
		  tests/sonet23v4.c
		  tests/autocorr_bern60-08.c
		  tests/crudeoil_li03.c
		  tests/crudeoil_li06.c
		  tests/rocket200.c
		  tests/graphpart_clique-50.c
		  tests/batchs201210m.c
		  tests/super3.c
		  tests/super2.c
		  tests/squfl015-060persp.c
		  tests/super1.c
		  tests/powerflow0057p.c
		  tests/crossdock_15x8.c
		  tests/rsyn0820m04m.c
		  tests/sfacloc2_4_80.c
		  tests/autocorr_bern25-13.c
		  tests/rsyn0820m03h.c
		  tests/rsyn0840m03m.c
		  tests/supplychainr1_022020.c
		  tests/sfacloc1_4_80.c
		  tests/pedigree_sp_top4_350tr.c
		  tests/gasprod_sarawak16.c
		  tests/sfacloc2_3_80.c
		  tests/sonet22v5.c
		  tests/rsyn0805m04h.c
		  tests/fdesign25.c
		  tests/popdynm25.c
		  tests/rsyn0815m04m.c
		  tests/sfacloc1_3_80.c
		  tests/edgecross14-058.c
		  tests/sepasequ_convent.c
		  tests/emfl050_3_3.c
		  tests/sfacloc2_2_80.c
		  tests/syn30m04h.c
		  tests/crudeoil_lee1_07.c
		  tests/product.c
		  tests/squfl015-080.c
		  tests/rsyn0815m03h.c
		  tests/sfacloc1_2_80.c
		  tests/fin2bb.c
		  tests/rsyn0840m02h.c
		  tests/squfl010-080persp.c
		  tests/squfl020-040persp.c
		  tests/nuclear25a.c
		  tests/lnts200.c
		  tests/transswitch0057r.c
		  tests/syn40m03h.c
		  tests/robot100.c
		  tests/super3t.c
		  tests/deb6.c
		  tests/sepasequ_complex.c
		  tests/crudeoil_li05.c
		  tests/autocorr_bern20-15.c
		  tests/nuclear14a.c
		  tests/rsyn0830m03m.c
		  tests/waterno2_09.c
		  tests/squfl025-030persp.c
		  tests/syn40m04m.c
		  tests/rsyn0810m04m.c
		  tests/batchs151208m.c
		  tests/crossdock_15x7.c
		  tests/sporttournament50.c
		  tests/powerflow0039r.c
		  tests/rsyn0810m03h.c
		  tests/oil2.c
		  tests/rsyn0830m02h.c
		  tests/autocorr_bern35-09.c
		  tests/chain200.c
		  tests/edgecross14-039.c
		  tests/squfl020-050.c
		  tests/squfl025-040.c
		  tests/crudeoil_lee1_06.c
		  tests/transswitch0039p.c
		  tests/sporttournament48.c
		  tests/rsyn0805m04m.c
		  tests/hydroenergy3.c
		  tests/rsyn0820m03m.c
		  tests/kall_ellipsoids_tc05a.c
		  tests/genpooling_meyer15.c
		  tests/squfl025-025persp.c
		  tests/batchs121208m.c
		  tests/catmix200.c
		  tests/cardqp_inlp.c
		  tests/waterund28.c
		  tests/graphpart_clique-40.c
		  tests/sporttournament46.c
		  tests/cardqp_iqp.c
		  tests/squfl015-060.c
		  tests/rsyn0805m03h.c
		  tests/powerflow0030r.c
		  tests/powerflow0039p.c
		  tests/rsyn0815m03m.c
		  tests/syn30m03h.c
		  tests/tls12.c
		  tests/hadamard_6.c
		  tests/transswitch0030p.c
		  tests/syn20m04h.c
		  tests/rsyn0820m02h.c
		  tests/sporttournament44.c
		  tests/syn30m04m.c
		  tests/edgecross14-019.c
		  tests/squfl010-080.c
		  tests/kall_circlespolygons_c1p6a.c
		  tests/squfl020-040.c
		  tests/rsyn0840m02m.c
		  tests/camshape400.c
		  tests/crudeoil_lee1_05.c
		  tests/carton9.c
		  tests/rsyn0810m03m.c
		  tests/sporttournament42.c
		  tests/squfl025-030.c
		  tests/rsyn0815m02h.c
		  tests/powerflow0030p.c
		  tests/syn40m03m.c
		  tests/waterno2_06.c
		  tests/transswitch0039r.c
		  tests/glider50.c
		  tests/slay10h.c
		  tests/portfol_shortfall050_68.c
		  tests/portfol_robust050_34.c
		  tests/rocket100.c
		  tests/syn40m02h.c
		  tests/cecil_13.c
		  tests/arki0001.c
		  tests/turkey.c
		  tests/edgecross10-070.c
		  tests/sporttournament40.c
		  tests/rsyn0830m02m.c
		  tests/rsyn0805m03m.c
		  tests/fuzzy.c
		  tests/autocorr_bern30-08.c
		  tests/waterund32.c
		  tests/autocorr_bern55-06.c
		  tests/rsyn0810m02h.c
		  tests/syn15m04h.c
		  tests/transswitch0030r.c
		  tests/squfl025-025.c
		  tests/carton7.c
		  tests/batchs101006m.c
		  tests/edgecross10-060.c
		  tests/ndcc16.c
		  tests/edgecross10-080.c
		  tests/nuclearve.c
		  tests/sonetgr17.c
		  tests/wastewater13m2.c
		  tests/nuclearvd.c
		  tests/nuclearvf.c
		  tests/sporttournament38.c
		  tests/autocorr_bern20-10.c
		  tests/polygon25.c
		  tests/ndcc16persp.c
		  tests/lnts100.c
		  tests/autocorr_bern50-06.c
		  tests/squfl010-040persp.c
		  tests/slay09h.c
		  tests/elec25.c
		  tests/syn20m03h.c
		  tests/kall_circlespolygons_c1p5b.c
		  tests/multiplants_mtg6.c
		  tests/rsyn0820m02m.c
		  tests/robot50.c
		  tests/fdesign10.c
		  tests/heatexch_gen3.c
		  tests/rsyn0805m02h.c
		  tests/syn30m03m.c
		  tests/edgecross10-050.c
		  tests/syn20m04m.c
		  tests/sporttournament36.c
		  tests/du-opt5.c
		  tests/du-opt.c
		  tests/knp4-24.c
		  tests/hydroenergy2.c
		  tests/syn30m02h.c
		  tests/rsyn0815m02m.c
		  tests/graphpart_clique-30.c
		  tests/gastrans040.c
		  tests/chain100.c
		  tests/waterno2_04.c
		  tests/ndcc14.c
		  tests/gancns.c
		  tests/rsyn0840h.c
		  tests/ndcc14persp.c
		  tests/sporttournament34.c
		  tests/edgecross10-090.c
		  tests/pooling_epa2.c
		  tests/blend480.c
		  tests/genpooling_meyer10.c
		  tests/supplychainp1_030510.c
		  tests/nuclearva.c
		  tests/qp2.c
		  tests/clay0305h.c
		  tests/blend852.c
		  tests/multiplants_stg6.c
		  tests/hvycrash.c
		  tests/waterful2.c
		  tests/edgecross10-040.c
		  tests/slay08h.c
		  tests/nuclearvb.c
		  tests/nuclearvc.c
		  tests/rsyn0810m02m.c
		  tests/catmix100.c
		  tests/qp3.c
		  tests/syn15m03h.c
		  tests/kall_circlesrectangles_c6r39.c
		  tests/syn40m02m.c
		  tests/sporttournament32.c
		  tests/powerflow0014r.c
		  tests/syn15m04m.c
		  tests/rsyn0830h.c
		  tests/ndcc15.c
		  tests/squfl010-040.c
		  tests/transswitch0014p.c
		  tests/risk2bpb.c
		  tests/rsyn0805m02m.c
		  tests/blend531.c
		  tests/syn10m04h.c
		  tests/ndcc15persp.c
		  tests/camshape200.c
		  tests/crudeoil_li01.c
		  tests/bchoco08.c
		  tests/casctanks.c
		  tests/flay06h.c
		  tests/heatexch_spec3.c
		  tests/portfol_classical050_1.c
		  tests/sporttournament30.c
		  tests/edgecross10-030.c
		  tests/pooling_digabel19.c
		  tests/syn20m03m.c
		  tests/camcns.c
		  tests/waterno2_03.c
		  tests/multiplants_mtg2.c
		  tests/squfl010-025persp.c
		  tests/ndcc12persp.c
		  tests/ndcc12.c
		  tests/ndcc13.c
		  tests/clay0205h.c
		  tests/waterund27.c
		  tests/netmod_kar1.c
		  tests/netmod_kar2.c
		  tests/ndcc13persp.c
		  tests/rocket50.c
		  tests/syn20m02h.c
		  tests/powerflow0014p.c
		  tests/multiplants_mtg1c.c
		  tests/slay07h.c
		  tests/feedtray2.c
		  tests/rsyn0820h.c
		  tests/clay0304h.c
		  tests/lop97icx.c
		  tests/blend721.c
		  tests/graphpart_2g-1010-0824.c
		  tests/clay0304hfsg.c
		  tests/heatexch_trigen.c
		  tests/sfacloc2_4_90.c
		  tests/deb10.c
		  tests/blend146.c
		  tests/waterund36.c
		  tests/syn30m02m.c
		  tests/sporttournament28.c
		  tests/multiplants_stg1b.c
		  tests/blend718.c
		  tests/space25.c
		  tests/ghg_3veh.c
		  tests/feedtray.c
		  tests/multiplants_stg5.c
		  tests/autocorr_bern45-05.c
		  tests/multiplants_stg1c.c
		  tests/rsyn0815h.c
		  tests/edgecross10-020.c
		  tests/wastewater12m2.c
		  tests/multiplants_stg1.c
		  tests/graphpart_3g-0444-0444.c
		  tests/transswitch0014r.c
		  tests/tricp.c
		  tests/lnts50.c
		  tests/pooling_epa1.c
		  tests/sfacloc1_4_90.c
		  tests/o9_ar4_1.c
		  tests/fo9_ar25_1.c
		  tests/fo9_ar3_1.c
		  tests/fo9_ar5_1.c
		  tests/fo9_ar2_1.c
		  tests/fo9_ar4_1.c
		  tests/syn40h.c
		  tests/syn15m03m.c
		  tests/multiplants_stg1a.c
		  tests/kall_circlesrectangles_c6r29.c
		  tests/multiplants_mtg5.c
		  tests/tls7.c
		  tests/multiplants_mtg1b.c
		  tests/sporttournament26.c
		  tests/multiplants_mtg1a.c
		  tests/syn10m03h.c
		  tests/syn15m02h.c
		  tests/autocorr_bern40-05.c
		  tests/rsyn0840m.c
		  tests/sfacloc2_3_90.c
		  tests/graphpart_2g-0099-9211.c
		  tests/autocorr_bern25-06.c
		  tests/syn10m04m.c
		  tests/sfacloc2_4_95.c
		  tests/edgecross10-010.c
		  tests/rsyn0810h.c
		  tests/qp4.c
		  tests/hydroenergy1.c
		  tests/clay0204h.c
		  tests/clay0204hfsg.c
		  tests/flay05h.c
		  tests/squfl010-025.c
		  tests/pooling_digabel16.c
		  tests/cesam2log.c
		  tests/slay06h.c
		  tests/waterno2_02.c
		  tests/primary.c
		  tests/slay10m.c
		  tests/sfacloc1_3_90.c
		  tests/waternd2.c
		  tests/chain50.c)

set(SMALL_FILES tests/rsyn0830m.c
                tests/space25a.c
		tests/sporttournament24.c
		tests/fo9.c
		tests/watersym1.c
		tests/watersym2.c
		tests/clay0303h.c
		tests/rsyn0805h.c
		tests/o8_ar4_1.c
		tests/fo8_ar25_1.c
		tests/fo8_ar3_1.c
		tests/fo8_ar5_1.c
		tests/fo8_ar2_1.c
		tests/fo8_ar4_1.c
		tests/btest14.c
		tests/clay0303hfsg.c
		tests/sfacloc1_4_95.c
		tests/watertreatnd_flow.c
		tests/graphpart_3g-0344-0344.c
		tests/graphpart_clique-20.c
		tests/smallinvDAXr4b100-110.c
		tests/smallinvDAXr4b150-165.c
		tests/smallinvDAXr4b200-220.c
		tests/smallinvDAXr5b100-110.c
		tests/smallinvDAXr5b150-165.c
		tests/smallinvDAXr5b200-220.c
		tests/smallinvDAXr3b100-110.c
		tests/smallinvDAXr3b150-165.c
		tests/smallinvDAXr3b200-220.c
		tests/smallinvDAXr4b010-011.c
		tests/smallinvDAXr4b020-022.c
		tests/smallinvDAXr4b050-055.c
		tests/smallinvDAXr5b010-011.c
		tests/smallinvDAXr5b020-022.c
		tests/smallinvDAXr5b050-055.c
		tests/smallinvDAXr3b010-011.c
		tests/smallinvDAXr3b020-022.c
		tests/smallinvDAXr3b050-055.c
		tests/smallinvDAXr2b100-110.c
		tests/smallinvDAXr2b150-165.c
		tests/smallinvDAXr2b200-220.c
		tests/smallinvDAXr1b100-110.c
		tests/smallinvDAXr1b150-165.c
		tests/smallinvDAXr1b200-220.c
		tests/smallinvDAXr2b010-011.c
		tests/smallinvDAXr2b020-022.c
		tests/smallinvDAXr2b050-055.c
		tests/smallinvDAXr1b010-011.c
		tests/smallinvDAXr1b020-022.c
		tests/smallinvDAXr1b050-055.c
		tests/syn20m02m.c
		tests/graphpart_2g-0088-0088.c
		tests/sfacloc2_2_90.c
		tests/syn30h.c
		tests/watertreatnd_conc.c
		tests/tspn15.c
		tests/rsyn0820m.c
		tests/sfacloc2_3_95.c
		tests/syn05m04h.c
		tests/supplychainr1_030510.c
		tests/sporttournament22.c
		tests/slay09m.c
		tests/sfacloc1_2_90.c
		tests/bchoco07.c
		tests/like.c
		tests/rsyn0815m.c
		tests/camshape100.c
		tests/powerflow0009r.c
		tests/ghg_2veh.c
		tests/fo8.c
		tests/parallel.c
		tests/syn10m03m.c
		tests/transswitch0009p.c
		tests/wastewater11m2.c
		tests/tls6.c
		tests/sfacloc1_3_95.c
		tests/csched2.c
		tests/o7_ar25_1.c
		tests/no7_ar25_1.c
		tests/o7_ar3_1.c
		tests/o7_ar5_1.c
		tests/no7_ar3_1.c
		tests/o7_ar2_1.c
		tests/no7_ar5_1.c
		tests/no7_ar2_1.c
		tests/fo7_ar25_1.c
		tests/fo7_ar3_1.c
		tests/fo7_ar5_1.c
		tests/fo7_ar2_1.c
		tests/o7_ar4_1.c
		tests/no7_ar4_1.c
		tests/fo7_ar4_1.c
		tests/syn10m02hfsg.c
		tests/m7_ar2_1.c
		tests/m7_ar3_1.c
		tests/m7_ar25_1.c
		tests/maxmineig2.c
		tests/m7_ar5_1.c
		tests/m7_ar4_1.c
		tests/pointpack14.c
		tests/wastewater13m1.c
		tests/syn10m02h.c
		tests/clay0203h.c
		tests/rsyn0810m.c
		tests/syn15m02m.c
		tests/clay0203hfsg.c
		tests/graphpart_3g-0334-0334.c
		tests/bayes2_10.c
		tests/bayes2_30.c
		tests/bayes2_20.c
		tests/bayes2_50.c
		tests/slay05h.c
		tests/graphpart_2g-0077-0077.c
		tests/kall_ellipsoids_tc03c.c
		tests/sporttournament20.c
		tests/spectra2.c
		tests/powerflow0009p.c
		tests/flay04h.c
		tests/nvs24.c
		tests/graphpart_3pm-0444-0444.c
		tests/rsyn0805m.c
		tests/slay08m.c
		tests/csched2a.c
		tests/stockcycle.c
		tests/graphpart_2pm-0099-0999.c
		tests/kall_circlesrectangles_c6r1.c
		tests/enpro48pb.c
		tests/autocorr_bern35-04.c
		tests/syn20hfsg.c
		tests/supplychainp1_020306.c
		tests/wager.c
		tests/water3.c
		tests/syn05m03hfsg.c
		tests/heatexch_gen2.c
		tests/waterund22.c
		tests/o7_2.c
		tests/syn05m03h.c
		tests/syn20h.c
		tests/water4.c
		tests/fo7_2.c
		tests/o7.c
		tests/fo7.c
		tests/orth_d3m6.c
		tests/sfacloc2_2_95.c
		tests/m7.c
		tests/sssd25-08persp.c
		tests/wastewater14m2.c
		tests/syn05m04m.c
		tests/sssd25-08.c
		tests/transswitch0009r.c
		tests/ex8_6_1.c
		tests/syn40m.c
		tests/enpro56pb.c
		tests/tspn12.c
		tests/watersbp.c
		tests/sporttournament18.c
		tests/batch0812.c
		tests/sssd22-08persp.c
		tests/graphpart_3g-0244-0244.c
		tests/sfacloc1_2_95.c
		tests/sssd22-08.c
		tests/tls5.c
		tests/ravempb.c
		tests/pointpack12.c
		tests/waters.c
		tests/waterund14.c
		tests/autocorr_bern20-05.c
		tests/graphpart_3g-0333-0333.c
		tests/waterz.c
		tests/autocorr_bern30-04.c
		tests/maxmin.c
		tests/genpooling_meyer04.c
		tests/portfol_card.c
		tests/portfol_buyin.c
		tests/waterno2_01.c
		tests/portfol_roundlot.c
		tests/sssd20-08persp.c
		tests/sssd20-08.c
		tests/graphpart_2g-0066-0066.c
		tests/nvs23.c
		tests/bchoco06.c
		tests/eniplac.c
		tests/kall_circlespolygons_c1p5a.c
		tests/graphpart_2pm-0088-0888.c
		tests/kport40.c
		tests/graphpart_3pm-0344-0344.c
		tests/gasprod_sarawak01.c
		tests/slay07m.c
		tests/syn15hfsg.c
		tests/sssd18-08persp.c
		tests/ex8_3_14.c
		tests/beuster.c
		tests/pooling_bental5stp.c
		tests/sssd18-08.c
		tests/clay0305m.c
		tests/hadamard_5.c
		tests/batch0812_nc.c
		tests/ex8_6_2.c
		tests/syn15h.c
		tests/knp3-12.c
		tests/orth_d3m6_pl.c
		tests/ex14_2_7.c
		tests/blend029.c
		tests/syn10m02m.c
		tests/m6.c
		tests/ex8_3_12.c
		tests/sssd15-08persp.c
		tests/tln12.c
		tests/ex8_3_13.c
		tests/heatexch_spec2.c
		tests/sssd15-08.c
		tests/ex8_3_7.c
		tests/ex7_3_6.c
		tests/sporttournament16.c
		tests/ex8_3_8.c
		tests/slay04h.c
		tests/syn30m.c
		tests/ghg_1veh.c
		tests/heatexch_gen1.c
		tests/sssd16-07persp.c
		tests/ex8_3_11.c
		tests/kall_diffcircles_10.c
		tests/gsg_0001.c
		tests/ex8_3_1.c
		tests/graphpart_3g-0234-0234.c
		tests/gastrans.c
		tests/kall_ellipsoids_tc02b.c
		tests/util.c
		tests/wastewater05m2.c
		tests/wastewater15m2.c
		tests/korcns.c
		tests/sssd16-07.c
		tests/clay0205m.c
		tests/syn05m03m.c
		tests/lakes.c
		tests/tspn10.c
		tests/waterund25.c
		tests/syn05m02hfsg.c
		tests/ex1244.c
		tests/wastewater12m1.c
		tests/graphpart_2pm-0077-0777.c
		tests/sssd18-06persp.c
		tests/4stufen.c
		tests/nvs19.c
		tests/syn05m02h.c
		tests/pointpack10.c
		tests/pooling_adhya4stp.c
		tests/graphpart_3pm-0334-0334.c
		tests/sssd18-06.c
		tests/etamac.c
		tests/kall_circles_c8a.c
		tests/graphpart_2g-0055-0062.c
		tests/slay06m.c
		tests/tls4.c
		tests/gasnet.c
		tests/ex8_3_2.c
		tests/ex8_3_4.c
		tests/ex8_3_5.c
		tests/ex8_3_3.c
		tests/supplychainr1_020306.c
		tests/orth_d4m6_pl.c
		tests/sssd15-06persp.c
		tests/clay0304m.c
		tests/hybriddynamic_varcc.c
		tests/wastepaper6.c
		tests/flay03h.c
		tests/pooling_adhya3stp.c
		tests/bchoco05.c
		tests/waterund08.c
		tests/sssd15-06.c
		tests/kall_diffcircles_9.c
		tests/ex1266.c
		tests/pooling_bental5tp.c
		tests/genpooling_lee2.c
		tests/pooling_bental5pq.c
		tests/minlphix.c
		tests/sporttournament14.c
		tests/ethanolh.c
		tests/sssd25-04persp.c
		tests/waterx.c
		tests/st_m2.c
		tests/sssd25-04.c
		tests/ex6_2_7.c
		tests/ex4.c
		tests/ex8_2_4b.c
		tests/eq6_1.c
		tests/syn10hfsg.c
		tests/otpop.c
		tests/waternd1.c
		tests/ex8_4_8_bnd.c
		tests/st_e31.c
		tests/kall_circles_c7a.c
		tests/syn10h.c
		tests/heatexch_spec1.c
		tests/graphpart_3pm-0244-0244.c
		tests/ethanolm.c
		tests/syn20m.c
		tests/graphpart_2pm-0066-0066.c
		tests/hybriddynamic_fixedcc.c
		tests/kall_circles_c6c.c
		tests/graphpart_3pm-0333-0333.c
		tests/ex14_2_4.c
		tests/ex1243.c
		tests/clay0204m.c
		tests/st_rv9.c
		tests/lip.c
		tests/tanksize.c
		tests/nvs17.c
		tests/sssd20-04persp.c
		tests/pooling_adhya4tp.c
		tests/synheat.c
		tests/genpooling_lee1.c
		tests/pooling_adhya4pq.c
		tests/sssd20-04.c
		tests/kall_congruentcircles_c71.c
		tests/kall_congruentcircles_c72.c
		tests/tspn08.c
		tests/kall_diffcircles_8.c
		tests/wastepaper5.c
		tests/ex14_2_3.c
		tests/minlphi.c
		tests/hybriddynamic_var.c
		tests/flay06m.c
		tests/pooling_adhya3tp.c
		tests/launch.c
		tests/pooling_adhya3pq.c
		tests/sssd12-05persp.c
		tests/sssd12-05.c
		tests/ex1233.c
		tests/ex14_2_6.c
		tests/ex1265.c
		tests/slay05m.c
		tests/waterund17.c
		tests/ortez.c
		tests/ex8_4_7.c
		tests/hmittelman.c
		tests/chakra.c
		tests/pooling_rt2stp.c
		tests/pointpack08.c
		tests/weapons.c
		tests/syn05m02m.c
		tests/pollut.c
		tests/wastewater11m1.c
		tests/ex5_2_5.c
		tests/sporttournament12.c
		tests/cvxnonsep_nsig40.c
		tests/graphpart_2g-0044-1601.c
		tests/sssd15-04persp.c
		tests/sssd15-04.c
		tests/waterund11.c
		tests/clay0303m.c
		tests/syn15m.c
		tests/cvxnonsep_psig40.c
		tests/ex6_2_5.c
		tests/st_rv8.c
		tests/pooling_adhya2stp.c
		tests/kall_circles_c6a.c
		tests/kall_circles_c6b.c
		tests/water.c
		tests/graphpart_3pm-0234-0234.c
		tests/demo7.c
		tests/waterund18.c
		tests/cvxnonsep_nsig40r.c
		tests/ex8_3_9.c
		tests/kall_diffcircles_7.c
		tests/cvxnonsep_psig40r.c
		tests/nvs20.c
		tests/pooling_adhya1stp.c
		tests/ex5_3_3.c
		tests/wastewater14m1.c
		tests/kall_congruentcircles_c63.c
		tests/kall_congruentcircles_c61.c
		tests/kall_congruentcircles_c62.c
		tests/batch.c
		tests/graphpart_2pm-0055-0055.c
		tests/hybriddynamic_fixed.c
		tests/wastepaper4.c
		tests/st_qpc-m3c.c
		tests/kport20.c
		tests/st_qpc-m3b.c
		tests/st_qpc-m4.c
		tests/ex6_2_10.c
		tests/st_qpc-m3a.c
		tests/pooling_rt2pq.c
		tests/pooling_rt2tp.c
		tests/ex1266a.c
		tests/tloss.c
		tests/nvs18.c
		tests/flay05m.c
		tests/st_e32.c
		tests/tln7.c
		tests/st_e35.c
		tests/clay0203m.c
		tests/cvxnonsep_nsig30.c
		tests/ex1263.c
		tests/st_rv7.c
		tests/ex8_4_3.c
		tests/batch_nc.c
		tests/ex1264.c
		tests/sssd08-04persp.c
		tests/sssd08-04.c
		tests/ex14_2_9.c
		tests/pooling_adhya2tp.c
		tests/pooling_adhya2pq.c
		tests/cvxnonsep_psig30.c
		tests/chenery.c
		tests/wastewater04m2.c
		tests/cvxnonsep_normcon40r.c
		tests/tltr.c
		tests/ex14_1_7.c
		tests/meanvarxsc.c
		tests/prob07.c
		tests/sporttournament10.c
		tests/fac2.c
		tests/syn05hfsg.c
		tests/cvxnonsep_nsig30r.c
		tests/cvxnonsep_psig30r.c
		tests/gtm.c
		tests/st_qpk3.c
		tests/kall_diffcircles_6.c
		tests/pooling_foulds2stp.c
		tests/ex1252.c
		tests/fac3.c
		tests/ex8_2_1b.c
		tests/syn05h.c
		tests/nous1.c
		tests/slay04m.c
		tests/nous2.c
		tests/pooling_adhya1tp.c
		tests/pooling_adhya1pq.c
		tests/ex1265a.c
		tests/wastewater05m1.c
		tests/wastewater15m1.c
		tests/elf.c
		tests/abel.c
		tests/kall_congruentcircles_c51.c
		tests/kall_congruentcircles_c52.c
		tests/tln6.c
		tests/syn10m.c
		tests/kall_circlesrectangles_c1r11.c
		tests/kall_circlesrectangles_c1r12.c
		tests/ex14_2_8.c
		tests/kall_circlesrectangles_c1r13.c
		tests/st_m1.c
		tests/meanvarx.c
		tests/ex6_2_13.c
		tests/wastepaper3.c
		tests/ex1252a.c
		tests/kall_circlespolygons_c1p13.c
		tests/pointpack06.c
		tests/kall_circlespolygons_c1p11.c
		tests/kall_circlespolygons_c1p12.c
		tests/ex6_2_9.c
		tests/ball_mk4_15.c
		tests/csched1.c
		tests/ex2_1_10.c
		tests/graphpart_2pm-0044-0044.c
		tests/procsyn.c
		tests/cvxnonsep_normcon30r.c
		tests/flay04m.c
		tests/st_rv3.c
		tests/st_testgr3.c
		tests/flay02h.c
		tests/tls2.c
		tests/srcpm.c
		tests/waterund01.c
		tests/m3.c
		tests/cvxnonsep_nsig20.c
		tests/ex14_2_1.c
		tests/ex4_1_2.c
		tests/nvs13.c
		tests/ex2_1_7.c
		tests/wastewater02m2.c
		tests/kall_diffcircles_5b.c
		tests/kall_diffcircles_5a.c
		tests/ramsey.c
		tests/st_rv2.c
		tests/st_fp7b.c
		tests/inscribedsquare03.c
		tests/st_fp7a.c
		tests/st_fp7d.c
		tests/st_fp7e.c
		tests/cvxnonsep_psig20.c
		tests/pooling_foulds2tp.c
		tests/pooling_foulds2pq.c
		tests/meanvar.c
		tests/tspn05.c
		tests/ex8_4_6.c
		tests/st_fp7c.c
		tests/cvxnonsep_psig20r.c
		tests/cvxnonsep_nsig20r.c
		tests/jit1.c
		tests/ex8_4_2.c
		tests/tln5.c
		tests/st_fp8.c
		tests/ex1263a.c
		tests/ex1264a.c
		tests/ex6_2_8.c
		tests/ex6_2_6.c
		tests/cvxnonsep_normcon40.c
		tests/st_test8.c
		tests/ex7_2_1.c
		tests/himmel16.c
		tests/ex6_2_14.c
		tests/ball_mk3_30.c
		tests/hhfair.c
		tests/linear.c
		tests/sporttournament08.c
		tests/ex14_2_5.c
		tests/ex6_2_11.c
		tests/st_iqpbk1.c
		tests/kall_congruentcircles_c41.c
		tests/kall_congruentcircles_c42.c
		tests/supplychain.c
		tests/st_iqpbk2.c
		tests/ex8_4_5.c
		tests/ex6_2_12.c
		tests/prolog.c
		tests/ball_mk4_10.c
		tests/ex7_3_5.c
		tests/cvxnonsep_normcon20r.c
		tests/csched1a.c
		tests/ex3pb.c
		tests/ex6_1_3.c
		tests/ex14_1_2.c
		tests/ex5_4_4.c
		tests/synthes3.c
		tests/cvxnonsep_normcon30.c
		tests/sep1.c
		tests/hydro.c
		tests/hadamard_4.c
		tests/shiporig.c
		tests/ex7_3_4.c
		tests/harker.c
		tests/tln4.c
		tests/syn05m.c
		tests/ex2_1_8.c
		tests/st_e37.c
		tests/ball_mk2_30.c
		tests/ex2_1_5.c
		tests/nvs12.c
		tests/flay03m.c
		tests/ball_mk3_20.c
		tests/nvs05.c
		tests/nvs22.c
		tests/st_miqp5.c
		tests/wastewater04m1.c
		tests/ex14_1_6.c
		tests/windfac.c
		tests/st_test5.c
		tests/st_jcbpaf2.c
		tests/fac1.c
		tests/pooling_bental4stp.c
		tests/batchdes.c
		tests/st_qpk2.c
		tests/inscribedsquare02.c
		tests/chem.c
		tests/nvs09.c
		tests/bearing.c
		tests/pointpack04.c
		tests/ex8_4_1.c
		tests/kall_congruentcircles_c31.c
		tests/kall_congruentcircles_c32.c
		tests/ex14_2_2.c
		tests/immun.c
		tests/autocorr_bern25-03.c
		tests/ex8_5_6.c
		tests/sambal.c
		tests/ex7_3_1.c
		tests/inscribedsquare01.c
		tests/cvxnonsep_normcon20.c
		tests/sporttournament06.c
		tests/ex7_2_4.c
		tests/st_qpc-m1.c
		tests/circle.c
		tests/st_e40.c
		tests/ex5_4_3.c
		tests/mathopt3.c
		tests/st_e16.c
		tests/ex2_1_6.c
		tests/alkylation.c
		tests/ex5_3_2.c
		tests/spring.c
		tests/pooling_haverly3stp.c
		tests/pooling_haverly1stp.c
		tests/pooling_haverly2stp.c
		tests/synthes2.c
		tests/autocorr_bern20-03.c
		tests/ex8_5_5.c
		tests/wastewater02m1.c
		tests/pooling_bental4pq.c
		tests/ex8_5_2.c
		tests/ball_mk4_05.c
		tests/ex6_1_1.c
		tests/ex8_5_1.c
		tests/pooling_bental4tp.c
		tests/ex1223.c
		tests/st_e14.c
		tests/fuel.c
		tests/ex7_2_3.c
		tests/st_rv1.c
		tests/st_test6.c
		tests/st_testgr1.c
		tests/ex3_1_2.c
		tests/st_e30.c
		tests/ex14_1_8.c
		tests/st_e36.c
		tests/ex9_2_3.c
		tests/st_bpaf1b.c
		tests/st_bpaf1a.c
		tests/ex8_1_2.c
		tests/st_e41.c
		tests/st_e25.c
		tests/ex1223b.c
		tests/ex8_5_3.c
		tests/ex8_5_4.c
		tests/ex2_1_3.c
		tests/st_test3.c
		tests/nvs11.c
		tests/ex6_1_4.c
		tests/pooling_haverly3pq.c
		tests/pooling_haverly3tp.c
		tests/pooling_haverly1pq.c
		tests/pooling_haverly1tp.c
		tests/pooling_haverly2pq.c
		tests/pooling_haverly2tp.c
		tests/ball_mk3_10.c
		tests/dispatch.c
		tests/alkyl.c
		tests/process.c
		tests/flay02m.c
		tests/ex8_1_7.c
		tests/ex9_2_6.c
		tests/st_robot.c
		tests/st_glmp_kky.c
		tests/ex9_1_1.c
		tests/himmel11.c
		tests/ex14_1_1.c
		tests/ex1223a.c
		tests/st_e34.c
		tests/synthes1.c
		tests/ex1225.c
		tests/st_e28.c
		tests/ex1224.c
		tests/st_e29.c
		tests/ex9_1_8.c
		tests/st_e03.c
		tests/ex9_1_5.c
		tests/tln2.c
		tests/gear2.c
		tests/st_testph4.c
		tests/haverly.c
		tests/st_ph14.c
		tests/ex5_2_4.c
		tests/st_ph13.c
		tests/st_ph1.c
		tests/nvs02.c
		tests/ex9_2_2.c
		tests/st_ph2.c
		tests/ex9_2_7.c
		tests/least.c
		tests/ex7_3_2.c
		tests/ball_mk2_10.c
		tests/gkocis.c
		tests/alan.c
		tests/ex14_1_5.c
		tests/nvs14.c
		tests/st_glmp_ss1.c
		tests/ex7_3_3.c
		tests/ex2_1_9.c
		tests/st_ph20.c
		tests/st_test4.c
		tests/ex14_1_4.c
		tests/prob02.c
		tests/ex3_1_3.c
		tests/wallfix.c
		tests/ex14_1_9.c
		tests/st_e21.c
		tests/st_ph3.c
		tests/oaer.c
		tests/ex2_1_4.c
		tests/st_e07.c
		tests/ex8_1_3.c
		tests/procsel.c
		tests/wall.c
		tests/house.c
		tests/st_e38.c
		tests/mhw4d.c
		tests/ex9_1_2.c
		tests/st_bsj4.c
		tests/ex9_1_4.c
		tests/nvs08.c
		tests/ex5_2_2_case1.c
		tests/ex5_2_2_case2.c
		tests/ex5_2_2_case3.c
		tests/hs62.c
		tests/ex1226.c
		tests/ex9_2_5.c
		tests/chance.c
		tests/st_e33.c
		tests/mathopt6.c
		tests/ex7_2_2.c
		tests/nemhaus.c
		tests/nvs01.c
		tests/ex3_1_1.c
		tests/ex9_2_4.c
		tests/st_glmp_fp2.c
		tests/st_cqpf.c
		tests/ex5_4_2.c
		tests/st_glmp_ss2.c
		tests/ex6_1_2.c
		tests/st_ph15.c
		tests/st_glmp_kk92.c
		tests/st_glmp_fp1.c
		tests/st_glmp_fp3.c
		tests/filter.c
		tests/ex14_1_3.c
		tests/ex4_1_9.c
		tests/st_glmp_kk90.c
		tests/ex3_1_4.c
		tests/sample.c
		tests/ex2_1_1.c
		tests/st_bpk1.c
		tests/st_bsj2.c
		tests/st_e04.c
		tests/ex1221.c
		tests/st_e15.c
		tests/st_e27.c
		tests/st_pan1.c
		tests/st_test2.c
		tests/st_miqp4.c
		tests/trigx.c
		tests/mathopt2.c
		tests/mathopt4.c
		tests/st_z.c
		tests/ex2_1_2.c
		tests/st_bsj3.c
		tests/nvs10.c
		tests/pointpack02.c
		tests/gear3.c
		tests/st_cqpjk1.c
		tests/st_e12.c
		tests/nvs21.c
		tests/mathopt5_5.c
		tests/ex9_2_8.c
		tests/prob10.c
		tests/st_ph11.c
		tests/st_qpk1.c
		tests/st_miqp1.c
		tests/st_ph12.c
		tests/st_phex.c
		tests/ex8_1_6.c
		tests/st_e22.c
		tests/nvs06.c
		tests/st_bpv2.c
		tests/st_e42.c
		tests/st_e05.c
		tests/prob06.c
		tests/st_ph10.c
		tests/st_e26.c
		tests/st_e11.c
		tests/gbd.c
		tests/st_test1.c
		tests/st_e18.c
		tests/st_e02.c
		tests/trig.c
		tests/st_miqp2.c
		tests/st_e24.c
		tests/ex1222.c
		tests/st_e19.c
		tests/st_e06.c
		tests/nvs15.c
		tests/st_bpv1.c
		tests/ex8_1_5.c
		tests/ex4_1_1.c
		tests/mathopt1.c
		tests/nvs16.c
		tests/mathopt5_7.c
		tests/st_ht.c
		tests/gear4.c
		tests/mathopt5_4.c
		tests/st_cqpjk2.c
		tests/nvs07.c
		tests/nvs03.c
		tests/ex4_1_3.c
		tests/ex8_1_4.c
		tests/st_e08.c
		tests/prob09.c
		tests/mathopt5_6.c
		tests/ex4_1_5.c
		tests/st_qpc-m0.c
		tests/st_e17.c
		tests/mathopt5_3.c
		tests/ex4_1_8.c
		tests/mathopt5_8.c
		tests/st_e13.c
		tests/ex8_1_1.c
		tests/st_e23.c
		tests/st_e09.c
		tests/ex4_1_7.c
		tests/ex4_1_6.c
		tests/st_miqp3.c
		tests/mathopt5_1.c
		tests/ex4_1_4.c
		tests/gear.c
		tests/nvs04.c
		tests/prob03.c
		tests/rbrock.c
		tests/st_e01.c
		tests/mathopt5_2.c)

if (BUILD_SMALL_LIB)
  add_library(libnlc-small SHARED ${SMALL_FILES})
  
  install(TARGETS libnlc-small
          DESTINATION ${CMAKE_INSTALL_LIBDIR})

  install(FILES include/small_files.h
          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
endif ()

if (BUILD_MEDIUM_1_LIB)
  add_library(libnlc-medium1 SHARED ${MEDIUM1_FILES})
  
  install(TARGETS libnlc-medium1
          DESTINATION ${CMAKE_INSTALL_LIBDIR})

  install(FILES include/medium1_files.h
          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
endif ()

if (BUILD_MEDIUM_2_LIB)
  add_library(libnlc-medium2 SHARED ${MEDIUM2_FILES})
  
  install(TARGETS libnlc-medium2
          DESTINATION ${CMAKE_INSTALL_LIBDIR})

  install(FILES include/medium2_files.h
          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
endif ()

if (BUILD_BIG_LIB)
  add_library(libnlc-big SHARED ${BIG_FILES})
  
  install(TARGETS libnlc-big
          DESTINATION ${CMAKE_INSTALL_LIBDIR})

  install(FILES include/big_files.h
          DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
endif ()
